# GOMEA

./: .gitignore  CONTRIBUTE.md  LICENSE  MANIFEST.in  Makefile  README.md  disc_main.py  environment.yml  export_symbols.sh  gomea-lib.code-workspace  gomea.code-workspace  main.py  main2.py  meson.build  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml  makefile.yml  run_demo.yml  run_demo_windows.yml
_version/: __init__.py
benchmarks/: deceptive_trap.py  experiments.py  maxcut.py  output.py  plotting.py  rosenbrock.py  soreb_chain.py
benchmarks/cython_discrete/: CustomFitness.pyx  main.py
benchmarks/deceptive_trap/: CythonTrapFunction.pyx  PythonTrapFunction.py  main.py
benchmarks/discrete/: CythonTrapFunction-cdef.pyx  Makefile  main.py  setup.py
benchmarks/maxcut/: CythonMaxCut.pyx  PythonMaxCut.py  setup.py
benchmarks/rosenbrock/: PythonRosenbrock.py
benchmarks/soreb_chain/: PythonSOREBChainStrong.py
demo/: CustomFitness.pyx  disc_main.py  main.py
demos/: demo.py
demos/bbo_discrete/: main.py
demos/bbo_realvalued/: main.py
demos/cython_fitness/: CustomFitness.c  CustomFitness.pyx  main.py  setup.py
demos/cython_fitness_demo/: CustomFitness.pyx
demos/gbo_discrete/: main.py
demos/gbo_realvalued/: main.py
demos/plotting/: main.py
demos/simple_discrete/: main.py
demos/simple_realvalued/: main.py
docs/source/: conf.py  index.rst  usage.rst
gomea/: EmbeddedFitness.pxi  __init__.py  discrete.pxd  discrete.pyx  fitness.pxd  fitness.pyx  linkage.pxd  linkage.pyx  meson.build  output.pxd  output.pyx  real_valued.pxd  real_valued.pyx
gomea/src/common/: cond_factor.cpp  cond_factor.hpp  distribution.cpp  distribution.hpp  factorization.cpp  factorization.hpp  gomea_defs.hpp  linkage_config.cpp  linkage_config.hpp  linkage_model.cpp  linkage_model.hpp  output_statistics.cpp  output_statistics.hpp  partial_solution.cpp  partial_solution.hpp  sampler.hpp  solution.cpp  solution.hpp
gomea/src/discrete/: Config.cpp  Config.hpp  FOS.cpp  FOS.hpp  Individual.cpp  Individual.hpp  Population.cpp  Population.hpp  config.cpp  config.hpp  gomea.cpp  gomea.hpp  gomeaIMS.cpp  gomeaIMS.hpp  main.cpp  problems.cpp  problems.hpp  sampler.cpp  sampler.hpp  shared.hpp  time.cpp  utils.cpp  utils.hpp
gomea/src/fitness/: bbo_fitness.cpp  bbo_fitness.hpp  benchmarks-discrete.hpp  benchmarks-rv.hpp  fitness.cpp  fitness.hpp  fitness_custom.cpp  fitness_custom.hpp  gbo_fitness.cpp  gbo_fitness.hpp  py_bbo_fitness.cpp  py_bbo_fitness.hpp  py_fitness.cpp  py_fitness.hpp  py_gbo_fitness.cpp  py_gbo_fitness.hpp  your_fitness.cpp  your_fitness.hpp  your_fitness_discrete.cpp  your_fitness_discrete.hpp  your_fitness_realvalued.cpp  your_fitness_realvalued.hpp
gomea/src/fitness/benchmarks-discrete/: NKlandscapesBBO_t.cpp  NKlandscapes_t.cpp  deceptiveTrapBBO_t.cpp  deceptiveTrap_t.cpp  maxCutBBO_t.cpp  maxCut_t.cpp  oneMaxBBO_t.cpp  oneMax_t.cpp
gomea/src/fitness/benchmarks-rv/: SOREBChainStrongBBO_t.cpp  SOREBChainStrong_t.cpp  circlesInASquareBBO_t.cpp  rosenbrockFunctionBBO_t.cpp  rosenbrockFunction_t.cpp  sphereFunctionBBO_t.cpp  sphereFunction_t.cpp
gomea/src/real_valued/: Config.cpp  Config.hpp  config.cpp  config.hpp  distribution.cpp  distribution.hpp  fos.cpp  fos.hpp  linkage_model.cpp  linkage_model.hpp  main.cpp  partial_solutionRV.cpp  partial_solutionRV.hpp  population.cpp  population.hpp  rv-gomea.cpp  rv-gomea.hpp  sampler.cpp  sampler.hpp  solutionRV.cpp  solutionRV.hpp  tools.cpp  tools.hpp
gomea/src/utils/: embed.cpp  embed.hpp  gomea_defs.hpp  linalg.cpp  linalg.hpp  rng.cpp  rng.hpp  time.cpp  time.hpp  tools.cpp  tools.hpp
inc/rvgomea/hpp/: rvgomea.h
include/common/: full_genotype.hpp  genotype.hpp  gomea_defs.hpp  partial_genotype.hpp  partial_solution.hpp  solution.hpp
include/discrete_gomea/: FOS.hpp  Population.hpp  gomea.hpp  gomeaIMS.hpp  problems.hpp  shared.hpp  utils.hpp
include/fitness/: benchmarks-rv.hpp  cpp_fitness_custom.hpp  fitness_basic.hpp  fitness_custom.hpp  py_fitness.hpp  your_fitness.hpp
include/real_valued_gomea/: Config.hpp  distribution.hpp  fitness.hpp  fitness_buffer.hpp  fos.hpp  mo_optimization.hpp  partial_solutionRV.hpp  population.hpp  rv-gomea.hpp  solutionRV.hpp
include/utils/: embed.hpp  tools.hpp
modules/common/include/: partial_solution.hpp  solution.hpp
modules/common/src/cpp/: partial_solution.cpp  solution.cpp
modules/discrete_gomea/include/: Config.hpp  FOS.hpp  Individual.hpp  gomea.hpp  time.hpp  utils.hpp
modules/discrete_gomea/src/cpp/: Config.cpp  gomea.cpp  main.cpp  problems.cpp  time.cpp  utils.cpp
modules/discrete_gomea/src/cython/: DiscreteGOMEA.pxd
modules/fitness/include/: embed.hpp
modules/fitness/src/cpp/: embed.cpp
modules/fitness/src/cython/: Fitness.pyx  (+4 more)
modules/real_valued_gomea/include/: Config.hpp  brachytherapy.hpp  distribution.hpp  fitness.hpp  fitness_buffer.hpp  fos.hpp  mo_optimization.hpp  partial_solution.hpp  partial_solutionRV.hpp  population.hpp  rv-gomea.hpp  solution.hpp  tools.hpp
src/: main.cpp
src/common/cpp/: full_genotype.cpp  partial_genotype.cpp  partial_solution.cpp  solution.cpp
src/discrete_gomea/cpp/: Config.cpp  FOS.cpp  Individual.cpp  Population.cpp  gomea.cpp  gomeaIMS.cpp  main.cpp  problems.cpp  time.cpp  utils.cpp
src/discrete_gomea/cython/: DiscreteGOMEA.pxd  pyDiscreteGOMEA.pyx
src/fitness/: custom_function.cpp  fitness.cpp  node.cpp  objective_function.cpp  subfunction_node.cpp
src/fitness/cpp/: benchmarks-rv.cpp  cpp_fitness_custom.cpp  fitness.txt  fitness_basic.cpp  fitness_custom.cpp  py_fitness.cpp  your_fitness.cpp
src/fitness/cython/: EmbeddedFitness.pxi  Fitness.pxd  Fitness.pyx
src/gomea/cpp/: RealValuedGOMEA.cpp
src/gomea/cython/: gomea.pyx
src/real_valued_gomea/cpp/: Config.cpp  distribution.cpp  fos.cpp  partial_solutionRV.cpp  population.cpp  rv-gomea.cpp  solutionRV.cpp  tools.cpp
src/real_valued_gomea/cython/: RealValuedGOMEA.pxd  RealValuedGOMEA.pyx
src/rvgomea/cpp/: rvgomea.cpp
src/rvgomea/cython/: pyrvgomea.pyx  rvgomea.pxd
src/utils/cpp/: embed.cpp  tools.cpp
(+16 files in other folders)
