[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'numpy>=1.23.0', 'Cython>=3.0']

[project]
name = 'gomea'
version = '1.0.5'
description = 'Library for the use of various variants of the Gene-pool Optimal Mixing Evolutionary Algorithm (GOMEA).'
readme = 'README.md'
requires-python = '>=3.9'
license = {file = 'LICENSE'}
authors = [
  {name = 'Anton Bouter', email = 'Anton.Bouter@cwi.nl'},
]
url = 'https://github.com/abouter/gomea'
dependencies = ['numpy>=1.23.0','tqdm>=4.65.0']

[tool.cibuildwheel.linux]
build = ["cp39-*manylinux*", "cp310-*manylinux*", "cp311-*manylinux*"]
archs = ["auto64"]

[tool.cibuildwheel.macos]
build = ["cp39-*", "cp310-*", "cp311-*"]
archs = ["auto64"]

[tool.cibuildwheel.windows]
build = ["cp39-*", "cp310-*", "cp311-*"]
archs = ["auto64"]
